force-app/main/default/objects/Trigger_Settings__c/fields/Account_Trigger_Active__c.field-meta.xml
<CustomField>
    <fullName>Account_Trigger_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Account Trigger Active</label>
    <type>Checkbox</type>
</CustomField>