force-app/main/default/objects/Trigger_Settings__c/fields/Opp_Product_Trigger_Active__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_Trigger_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opp Product Trigger Active</label>
    <type>Checkbox</type>
</CustomField>