force-app/main/default/objects/Trigger_Settings__c/fields/Opportunity_Triggers_Active__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Triggers_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opportunity Triggers Active</label>
    <type>Checkbox</type>
</CustomField>